# prompt-typo-robustness

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: experiment.yaml
data/: gsm8k.jsonl  instructions.jsonl  sst2.jsonl
notebooks/: analysis.ipynb
results/: logit_summary.txt  summary.csv
scripts/: build_notebook.py  fetch_data.py  generate_instructions.py
src/typo_study/: analysis.py  ollama_client.py  runner.py  tasks.py  typos.py
tests/: test_analysis.py  test_client.py  test_runner.py  test_tasks.py  test_typos.py
