[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typo-study"
version = "0.1.0"
description = "Measuring how realistic prompt typos degrade LLM task accuracy"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "nbformat>=5.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
